# oppw4-launcher

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  config.rs  diagnostics.rs  error.rs  installer.rs  launcher_status.rs  lib.rs  main.rs  mod_inventory.rs  models.rs  steam.rs  system_utils.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/launcher/: diagnostics.rs  game.rs  mod.rs  patcher.rs  state.rs  types.rs
src-tauri/src/commands/launcher/diagnostics/: exports.rs  logs.rs  mod.rs  status.rs
src-tauri/src/commands/launcher/game/: mod.rs  steam.rs
src-tauri/src/commands/mods/: folder.rs  install.rs  inventory.rs  keys.rs  metadata.rs  mod.rs  overlap.rs  paths.rs  profiles.rs  types.rs
src-tauri/src/commands/mods/metadata/: mod.rs  reader.rs  zip.rs
src-tauri/src/commands/system/: links.rs  logs.rs  mod.rs  paths.rs  types.rs  updates.rs
src-tauri/src/installer/: github.rs  hash.rs  install.rs  mod.rs  paths.rs  time.rs  types.rs
src-tauri/src/updater/: github.rs  mod.rs  platform.rs  types.rs
src/lib/: api.ts
src/lib/stores/: session.ts  theme.ts  toasts.ts
src/lib/utils/: externalLinks.ts  markdown.ts  video.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/admin/: +page.svelte
src/routes/launcher/: +page.svelte
src/routes/login/: +page.svelte
src/routes/modloader/: +page.svelte
(+66 files in other folders)
